@@ -1,5 +1,13 @@
 2004-01-14  Jackson Harper <jackson@ximian.com>
 
+	* Cache.cs: Return null when items are expired but have not been
+	removed yet.
+	* OutputCacheModule.cs: Handle sliding expirations. Remove hacks
+	checking if the item is expired, the cache no longer returns
+	expired items.
+	
+2004-01-14  Jackson Harper <jackson@ximian.com>
+
 	* Cache.cs: When using sliding expiration update the cache objects
 	expires time as well as the expires entry expire time because the
 	objects expire time is checked when objects are pulled out. This
